crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__error_level_unknown_token.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl_err(\"level=spicy\")"
---
unsupported operation: unknown severity token 'spicy' for level= (valid tokens: trace, debug, info, notice, warn, error, fatal, alert, emerg); to match the original text use severity_text instead
