crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__error_round_non_int_precision.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl_err(r#\"* | let r = round(duration, \"two\")\"#)"
---
invalid aggregation: round() argument 2 must be an integer literal
