crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__error_unknown_function.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl_err(\"* | stats bogus()\")"
---
unknown function: bogus
