crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__expr_compound_or.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | where status == 404 or status == 500\")"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE (("status" = ?) OR ("status" = ?))
---
params:
  0: 404
  1: 500
