crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__expr_ilike.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(r#\"* | where message ilike \"%timeout%\"\"#)"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE ("message" ILIKE ?)
---
params:
  0: '%timeout%'
