crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__expr_like.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(r#\"* | where host like \"prod-%\"\"#)"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE ("host" LIKE ?)
---
params:
  0: 'prod-%'
